generated/manifests/prod-axon/komga/HTTPRoute-komga.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: komga
  namespace: media
spec:
  hostnames:
    - komga.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: komga
          port: 25600
