generated/manifests/prod-axon/komga/CiliumNetworkPolicy-allow-gateway-ingress-komga.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-komga
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach komga.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: komga
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "25600"
              protocol: TCP
